fixed issue of having non NBA teams in the search results and search results not overlapping images

--- a/src/scss/SearchPage.scss
+++ b/src/scss/SearchPage.scss
@@ -49,6 +49,7 @@
     box-shadow: 0 3px 99px rgba(0, 0, 0, 0.25);
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
+    z-index: 2;
 
     > button {
       padding: 16px;
